@startuml mvc

skinparam shadowing false
'skinparam linetype polyline
'skinparam linetype ortho

skinparam class {
    ArrowColor black
    BorderColor black
    BackGroundColor lightgrey
}

skinparam package {
    ArrowColor black
    BorderColor black
    BackGroundColor white
}

package Views {
    interface "Observer" as obs {
        +changed() : void
        +close() : void
    }
}

package GameObjects {
    abstract "Entity" as entity {
        -pos : QPoint

        +draw(p : QPainter) : void
        +setPos(pos : QPoint) : void
        +setPose(x : qreal, y : qreal) : void
    }

    class "Sprite" as sprite {
        -image : QPixmap
    }

    abstract "StaticEntity" as statE {
        -transparent : boolean
        -noiseMuffler : boolean
    }

    abstract "DynamicEntity" as dynE {
        -speed : QPoint

        +update() : void
        +setSpeed(speed : QPoint) : void
        +setSpeed(x : qreal, y : qreal) : void
    }

    entity -> sprite
    statE .up.|> entity
    dynE .up.|> entity
}

package Scenes {
    interface Scene {

    }

    class Menu {

    }

    class GameScene {

    }

    Menu ..|> Scene
    GameScene ..|> Scene
}

package GameLogic {
    class Controller
}

@enduml
